# compliance-trestle-gsa

./: .gitignore  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: main.yml
src/trestle_gsa/commands/: defaults.py  tag_revision.py  validate.py
src/trestle_gsa/core/: gsa.py  merge.py  metadata.py  system_characteristics.py
tests/: conftest.py  const.py
tests/resources/: valid-base-ssp.json  valid-gsa-ssp.json
tests/trestle_gsa/commands/: defaults_test.py  tag_revision_test.py  validate_test.py
